--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@credo-ts/askar": "0.5.0",
-    "@credo-ts/core": "0.5.0",
-    "@credo-ts/node": "0.5.0",
+    "@credo-ts/askar": "0.5.11",
+    "@credo-ts/core": "0.5.11",
+    "@credo-ts/node": "0.5.11",
     "@credo-ts/push-notifications": "^0.7.1",
-    "@hyperledger/aries-askar-nodejs": "^0.2.0",
+    "@hyperledger/aries-askar-nodejs": "^0.2.2",
     "@mawhea/mongopubsub": "^1.0.0",
     "@types/amqplib": "^0.10.4",
     "@types/pg": "^8.10.9",
@@ -48,7 +48,9 @@
     "ts-node": "^10.0.0",
     "tslog": "^4.9.1",
     "typescript": "4.7.4",
-    "yamljs": "^0.3.0"
+    "yamljs": "^0.3.0",
+    "@hyperledger/anoncreds-shared": "^0.2.2",
+    "@hyperledger/aries-askar-shared": "^0.2.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
@@ -73,12 +75,12 @@
   "resolutions": {
     "tsyringe": "4.8.0",
     "typescript": "4.7.4",
-    "@credo-ts/anoncreds": "0.5.0",
-    "@credo-ts/askar": "0.5.0",
-    "@credo-ts/core": "0.5.0",
-    "@credo-ts/node": "0.5.0",
-    "@hyperledger/anoncreds-nodejs": "0.2.1",
-    "@hyperledger/aries-askar-nodejs": "0.2.0",
+    "@credo-ts/anoncreds": "0.5.11",
+    "@credo-ts/askar": "0.5.11",
+    "@credo-ts/core": "0.5.11",
+    "@credo-ts/node": "0.5.11",
+    "@hyperledger/anoncreds-nodejs": "0.2.2",
+    "@hyperledger/aries-askar-nodejs": "0.2.3",
     "ws": "^8.13.0",
     "@types/ws": "^8.5.4",
     "@types/node": "18.0.3"
