--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "prettier": "prettier --ignore-path .gitignore '**/*.+(js|json|ts|md|yml|yaml)'",
     "format": "yarn prettier --write",
+    "check-types": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "check-format": "yarn prettier --list-different",
     "lint": "eslint --ignore-path .gitignore .",
     "validate": "yarn lint && yarn check-format",
