--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@2060.io/message-pickup-repository-client": "^0.0.4",
     "@credo-ts/askar": "0.5.11",
     "@credo-ts/core": "0.5.11",
     "@credo-ts/node": "0.5.11",
     "@credo-ts/push-notifications": "^0.7.1",
+    "@hyperledger/anoncreds-shared": "^0.2.2",
     "@hyperledger/aries-askar-nodejs": "^0.2.2",
+    "@hyperledger/aries-askar-shared": "^0.2.3",
     "@mawhea/mongopubsub": "^1.0.0",
     "@types/amqplib": "^0.10.4",
     "@types/pg": "^8.10.9",
@@ -48,30 +51,28 @@
     "swagger-ui-express": "^4.1.6",
     "ts-node": "^10.0.0",
     "tslog": "^4.9.1",
-    "typescript": "4.7.4",
-    "yamljs": "^0.3.0",
-    "@hyperledger/anoncreds-shared": "^0.2.2",
-    "@hyperledger/aries-askar-shared": "^0.2.3"
+    "typescript": "5.6.3",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
     "@types/cross-spawn": "^6.0.6",
     "@types/express": "^4.17.12",
     "@types/jest": "^27.0.1",
-    "@types/node": "^18.0.3",
+    "@types/node": "^22.7.6",
     "@types/node-fetch": "^2.6.4",
     "@types/supertest": "^2.0.11",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.1",
     "@types/yamljs": "^0.2.31",
-    "@typescript-eslint/eslint-plugin": "^4.31.1",
-    "@typescript-eslint/parser": "^4.31.1",
-    "eslint": "^7.32.0",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "eslint": "^8.37.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "patch-package": "^6.4.7",
-    "prettier": "^2.4.0",
-    "ts-jest": "^27.0.5"
+    "prettier": "^2.8.0",
+    "ts-jest": "^29.2.5"
   },
   "resolutions": {
     "tsyringe": "4.8.0",
