--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,6 @@
 version: '3.7'
 
 services:
-  fcm-notification-sender:
-    image: io2060/2060-fcm-notification-sender:dev
-    ports:
-      - 3001:3001
-    environment:
-      - APP_PORT=3001
   postgres:
     image: postgres:alpine3.19
     ports:
@@ -16,10 +10,12 @@ services:
     environment:
       - POSTGRES_PASSWORD=cloud-agent
       - POSTGRES_USER=cloud-agent
-  cloud-agent:
+
+  didcomm-mediator-1:
     build: .
-    image: 2060-cloud-agent
-    container_name: 2060-cloud-agent
+    image: didcomm-mediator
+    container_name: didcomm-mediator-1
+    hostname: didcomm-mediator-1
     environment:
       #- AGENT_PUBLIC_DID=did:web:10.82.14.176%3A4000
       #- AGENT_ENDPOINTS=ws://10.82.14.176:4000
@@ -30,51 +26,13 @@ services:
       - POSTGRES_USER=cloud-agent
       - POSTGRES_PASSWORD=cloud-agent
       - KEY_DERIVATION_METHOD=ARGON2I_MOD
-      - DB_HOST=postgres
-      - DB_PUBSUB_FIXED=
-      - DB_NOSQL=true
-      - DB_URL_CONNECT=mongodb://cloud-agent:cloud-agent@mongodb:27017
-      - ENABLE_MESSAGE_REPOSITORY=true
-      - FCM_SERVICE_BASE_URL=http://fcm-notification-sender:3001/fcm/fcmNotificationSender/send
-    restart: always
+      - MPR_WS_URL=ws://192.168.10.13:3100
     ports:
-      - 4000:4000
+      - 3001:3000
+      - 4001:4000
     volumes:
       - .afj:/root/.afj
     depends_on:
       - postgres
-      - mongodb
-      - fcm-notification-sender
     links:
       - postgres
-      - mongodb
-      - fcm-notification-sender
-  mongodb:
-    container_name: mongodb
-    image: mongo:latest
-    restart: always
-    command:
-      - --storageEngine
-      - wiredTiger
-      - --auth
-    environment:
-      - MONGO_INITDB_ROOT_USERNAME=cloud-agent
-      - MONGO_INITDB_ROOT_PASSWORD=cloud-agent
-    ports:
-      - '27017:27017'
-    volumes:
-      - ~/data/mongodb:/data/db
-      #- ./db/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
-    depends_on:
-      - postgres
-  mongo-express:
-    image: mongo-express
-    restart: always
-    ports:
-      - 8081:8081
-    environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: cloud-agent
-      ME_CONFIG_MONGODB_ADMINPASSWORD: cloud-agent
-      ME_CONFIG_MONGODB_URL: mongodb://cloud-agent:cloud-agent@mongodb:27017
-    depends_on:
-      - mongodb
