--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - 5432:5432
     volumes:
-      - ~/data/postgres:/var/lib/postgresql/data
+      - ~/data/dm/postgres:/var/lib/postgresql/data
     environment:
       - POSTGRES_PASSWORD=cloud-agent
       - POSTGRES_USER=cloud-agent
@@ -26,13 +26,23 @@ services:
       - POSTGRES_USER=cloud-agent
       - POSTGRES_PASSWORD=cloud-agent
       - KEY_DERIVATION_METHOD=ARGON2I_MOD
-      - MPR_WS_URL=ws://192.168.10.13:3100
+      - FIREBASE_CFG_FILE=/config/firebase-cfg.json
+      #- MPR_WS_URL=ws://192.168.10.13:3100
     ports:
-      - 3001:3000
-      - 4001:4000
+      - 3000:3000
+      - 4000:4000
     volumes:
       - .afj:/root/.afj
+      - ./firebase-cfg.json:/config/firebase-cfg.json
     depends_on:
       - postgres
     links:
+      - postgres
+
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+      - 8080:8080
+    depends_on:
       - postgres
