--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -24,10 +24,13 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 18
+      
+      - name: Install pnpm
+        run: npm install -g pnpm
 
       - name: Install dependencies
         run: |
-          yarn install
+          pnpm install
 
       - uses: codfish/semantic-release-action@v3
         id: semantic
