--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,23 +16,22 @@ jobs:
       - name: Checkout didcomm-mediator
         uses: actions/checkout@v4
 
-      - name: Setup node v18
+      - name: Setup Node.js v18
         uses: actions/setup-node@v4
         with:
           node-version: 18
 
+      - name: Install pnpm
+        run: npm install -g pnpm
+
       - name: Install dependencies
-        run: |
-          yarn install
+        run: pnpm install
 
       - name: Check Format
-        run: |
-          yarn check-format
+        run: pnpm check-format
 
       - name: Check Types
-        run: |
-          yarn check-types
+        run: pnpm check-types
 
       - name: Build
-        run: |
-          yarn build
+        run: pnpm build
