--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "build/index.js",
   "scripts": {
     "prettier": "prettier --ignore-path .gitignore '**/*.+(js|json|ts|md|yml|yaml)'",
-    "format": "yarn prettier --write",
+    "format": "pnpm prettier --write",
     "check-types": "eslint \"{src,apps,libs,test}/**/*.ts\"",
-    "check-format": "yarn prettier --list-different",
+    "check-format": "pnpm prettier --list-different",
     "lint": "eslint --ignore-path .gitignore .",
-    "validate": "yarn lint && yarn check-format",
+    "validate": "pnpm lint && pnpm check-format",
     "build": "tsc",
     "start": "node ./build/index.js",
     "vdrproxy": "node ./build/vdrproxy/index.js",
@@ -43,7 +43,6 @@
     "express": "^4.18.1",
     "firebase-admin": "^11.0.0",
     "fs": "^0.0.1-security",
-    "jest": "^27.2.0",
     "mongodb": "^6.5.0",
     "path": "^0.12.7",
     "pg": "^8.11.3",
@@ -53,31 +52,34 @@
     "ts-node": "^10.0.0",
     "tslog": "^4.9.1",
     "typescript": "5.6.3",
-    "yamljs": "^0.3.0"
+    "yamljs": "^0.3.0",
+    "ws": "^8.13.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
     "@types/cross-spawn": "^6.0.6",
     "@types/express": "^4.17.12",
     "@types/jest": "^27.0.1",
-    "@types/node": "^22.7.6",
+    "@types/node": "^20.14.9",
     "@types/node-fetch": "^2.6.4",
     "@types/supertest": "^2.0.11",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.1",
     "@types/yamljs": "^0.2.31",
+    "@types/ws": "^8.5.13",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "eslint": "^8.37.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^27.2.0",
     "patch-package": "^6.4.7",
     "prettier": "^2.8.0",
     "ts-jest": "^29.2.5"
   },
   "resolutions": {
     "tsyringe": "4.8.0",
-    "typescript": "4.7.4",
+    "typescript": "^5.6.3",
     "@credo-ts/anoncreds": "0.5.11",
     "@credo-ts/askar": "0.5.11",
     "@credo-ts/core": "0.5.11",
@@ -85,7 +87,7 @@
     "@hyperledger/anoncreds-nodejs": "0.2.2",
     "@hyperledger/aries-askar-nodejs": "0.2.3",
     "ws": "^8.13.0",
-    "@types/ws": "^8.5.4",
-    "@types/node": "18.0.3"
+    "@types/ws": "^8.5.13",
+    "@types/node": "^20.14.9"
   }
 }
