--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "2060 DIDComm Mediator",
   "main": "build/index.js",
+  "packageManager": "pnpm@9.15.3",
   "scripts": {
     "prettier": "prettier --ignore-path .gitignore '**/*.+(js|json|ts|md|yml|yaml)'",
     "format": "pnpm prettier --write",
@@ -14,7 +15,8 @@
     "start": "node ./build/index.js",
     "vdrproxy": "node ./build/vdrproxy/index.js",
     "test": "jest --verbose",
-    "postinstall": "patch-package"
+    "postinstall": "patch-package",
+    "prepare": "corepack enable"
   },
   "repository": {
     "type": "git",
@@ -32,7 +34,6 @@
     "@hyperledger/anoncreds-shared": "^0.2.2",
     "@hyperledger/aries-askar-nodejs": "^0.2.2",
     "@hyperledger/aries-askar-shared": "^0.2.3",
-    "@mawhea/mongopubsub": "^1.0.0",
     "@types/amqplib": "^0.10.4",
     "@types/pg": "^8.10.9",
     "amqplib": "^0.10.3",
@@ -43,17 +44,14 @@
     "express": "^4.18.1",
     "firebase-admin": "^11.0.0",
     "fs": "^0.0.1-security",
-    "mongodb": "^6.5.0",
     "path": "^0.12.7",
-    "pg": "^8.11.3",
-    "pg-pubsub": "^0.8.1",
     "supertest": "^6.1.6",
     "swagger-ui-express": "^4.1.6",
     "ts-node": "^10.0.0",
     "tslog": "^4.9.1",
-    "typescript": "5.6.3",
-    "yamljs": "^0.3.0",
-    "ws": "^8.13.0"
+    "typescript": "5.1.6",
+    "ws": "^8.13.0",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
@@ -65,8 +63,8 @@
     "@types/supertest": "^2.0.11",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.1",
-    "@types/yamljs": "^0.2.31",
     "@types/ws": "^8.5.13",
+    "@types/yamljs": "^0.2.31",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "eslint": "^8.37.0",
@@ -79,7 +77,7 @@
   },
   "resolutions": {
     "tsyringe": "4.8.0",
-    "typescript": "^5.6.3",
+    "typescript": "5.1.6",
     "@credo-ts/anoncreds": "0.5.11",
     "@credo-ts/askar": "0.5.11",
     "@credo-ts/core": "0.5.11",
