--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -24,13 +24,14 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 18
-      
+
       - name: Install pnpm
-        run: npm install -g pnpm
+        run: |
+          npm install -g pnpm
+          corepack enable
 
       - name: Install dependencies
-        run: |
-          pnpm install
+        run: pnpm install
 
       - uses: codfish/semantic-release-action@v3
         id: semantic
