ci: fix CI/CD stage install pnpm to enable corepack
Signed-off-by: Gabriel Mata <gabrielmatau@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,10 +21,8 @@ jobs:
         with:
           node-version: 18
 
-      - name: Install pnpm
-        run: |
-          npm install -g pnpm
-          corepack enable
+      - name: Enable corepack
+        run: corepack enable
 
       - name: Install dependencies
         run: pnpm install
