--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -20,14 +20,16 @@ jobs:
       - name: Checkout didcomm-mediator
         uses: actions/checkout@v4
 
-      - name: Setup node v18
+      - name: Setup Node.js v22
         uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 22
+
+      - name: Enable corepack
+        run: corepack enable
 
       - name: Install dependencies
-        run: |
-          yarn install
+        run: pnpm install
 
       - uses: codfish/semantic-release-action@v3
         id: semantic
