--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,23 +16,22 @@ jobs:
       - name: Checkout didcomm-mediator
         uses: actions/checkout@v4
 
-      - name: Setup node v18
+      - name: Setup Node.js v22
         uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 22
+
+      - name: Enable corepack
+        run: corepack enable
 
       - name: Install dependencies
-        run: |
-          yarn install
+        run: pnpm install
 
       - name: Check Format
-        run: |
-          yarn check-format
+        run: pnpm check-format
 
       - name: Check Types
-        run: |
-          yarn check-types
+        run: pnpm check-types
 
       - name: Build
-        run: |
-          yarn build
+        run: pnpm build
