--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,9 @@ jobs:
       - name: Checkout didcomm-mediator
         uses: actions/checkout@v4
 
+      - name: Setup Helm
+        uses: azure/setup-helm@v3
+
       - name: Setup Node.js v22
         uses: actions/setup-node@v4
         with:
@@ -35,3 +38,6 @@ jobs:
 
       - name: Build
         run: pnpm build
+
+      - name: Validate Helm chart
+        run: helm lint ./charts
