fix: Fix image charts template with Chart.Version
Signed-off-by: Gabriel Mata <gabrielmatau@gmail.com>

--- a/charts/templates/deployment.yaml
+++ b/charts/templates/deployment.yaml
@@ -65,7 +65,7 @@ spec:
       restartPolicy: Always
       containers:
         - name: {{ .Values.statefulset.containerName }}
-          image: "io2060/didcomm-mediator:{{ .Chart.AppVersion }}"
+          image: io2060/didcomm-mediator:{{ .Chart.Version }}
           imagePullPolicy: {{ .Values.statefulset.image.pullPolicy }}
           ports:
             - containerPort: 4000
