--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -113,4 +113,4 @@ jobs:
           CHART_NAME=$(grep '^name:' ./charts/Chart.yaml | awk '{print $2}')
           helm dependency update ./charts
           helm package ./charts -d ./charts
-          helm push ./charts/$CHART_NAME-$RELEASE_VERSION.tgz oci://docker.io/$DH_USERNAME
+          helm push ./charts/$CHART_NAME-v$RELEASE_VERSION.tgz oci://docker.io/$DH_USERNAME
