--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,8 @@ jobs:
 
       - name: Check Types
         run: pnpm check-types
+      - name: Run Tests
+        run: pnpm test
 
       - name: Build
         run: pnpm build
