feat: Add integration @2060.io/credo-ts-didcomm-shorten-url package (#39)
* feat: Add integration @2060.io/credo-ts-didcomm-shorten-url package

Signed-off-by: Gabriel Mata <gabrielmatau@gmail.com>

* docs: Update docs with new feature shorten-url

Signed-off-by: Gabriel Mata <gabrielmatau@gmail.com>

* test: add shorten-url flow and update docs

Signed-off-by: Gabriel Mata <gabrielmatau@gmail.com>

* fix: commented code removed

Signed-off-by: Gabriel Mata <gabrielmatau@gmail.com>

* fix: Fix format readme.md

Signed-off-by: Gabriel Mata <gabrielmatau@gmail.com>

* fix: Remove unused variable

Signed-off-by: Gabriel Mata <gabrielmatau@gmail.com>

* chore: Fix response qhen short-url has expired

Signed-off-by: Gabriel Mata <gabrielmatau@gmail.com>

* fix: Fix the shorten base url

Signed-off-by: Gabriel Mata <gabrielmatau@gmail.com>

* feat: Add shorten url records cleanup

Signed-off-by: Gabriel Mata <gabrielmatau@gmail.com>

* fix: Fix format and types

Signed-off-by: Gabriel Mata <gabrielmatau@gmail.com>

* feat: derive SHORTEN_INVITATION_BASE_URL from AGENT_PUBLIC_DID when unset

Signed-off-by: Gabriel Mata <gabrielmatau@gmail.com>

* feat: DidCommRequestShortenedUrlReceivedEvent mediation check

Signed-off-by: Gabriel Mata <gabrielmatau@gmail.com>

* feat: switch cleanup interval to seconds and guard disabled monitor

Signed-off-by: Gabriel Mata <gabrielmatau@gmail.com>

* feat: Applying improvements shorten-url packages 0.0.5

Signed-off-by: Gabriel Mata <gabrielmatau@gmail.com>

* test: Add shorten-url integration basic test

Signed-off-by: Gabriel Mata <gabrielmatau@gmail.com>

* ci: Add run test

Signed-off-by: Gabriel Mata <gabrielmatau@gmail.com>

* refactor: Rename repository variable and refactor computedShortBase assing

Signed-off-by: Gabriel Mata <gabrielmatau@gmail.com>

---------

Signed-off-by: Gabriel Mata <gabrielmatau@gmail.com>

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "start": "node ./build/index.js",
     "vdrproxy": "node ./build/vdrproxy/index.js",
     "test": "jest --verbose",
+    "test:agent": "ts-node ./test/Client-Agent/ClientAgent.ts",
     "postinstall": "patch-package",
     "prepare": "corepack enable"
   },
@@ -25,6 +26,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@2060.io/credo-ts-didcomm-shorten-url": "0.0.5",
     "@2060.io/credo-ts-message-pickup-repository-pg": "0.0.15",
     "@2060.io/message-pickup-repository-client": "0.0.8",
     "@credo-ts/askar": "0.5.17",
