--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "didcomm-mediator",
   "version": "1.4.0",
   "description": "2060 DIDComm Mediator",
+  "type": "module",
   "main": "build/index.js",
   "packageManager": "pnpm@9.15.3",
   "scripts": {
@@ -15,7 +16,7 @@
     "start": "node ./build/index.js",
     "vdrproxy": "node ./build/vdrproxy/index.js",
     "test": "jest --verbose",
-    "test:agent": "ts-node ./test/Client-Agent/ClientAgent.ts",
+    "test:agent": "node --loader ts-node/esm ./test/Client-Agent/ClientAgent.ts",
     "postinstall": "patch-package",
     "prepare": "corepack enable"
   },
@@ -26,23 +27,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@2060.io/credo-ts-didcomm-shorten-url": "0.0.11",
-    "@2060.io/credo-ts-message-pickup-repository-pg": "0.0.15",
-    "@2060.io/message-pickup-repository-client": "0.0.8",
-    "@credo-ts/askar": "0.5.17",
-    "@credo-ts/core": "0.5.17",
-    "@credo-ts/node": "0.5.17",
-    "@credo-ts/push-notifications": "^0.7.1",
+    "@2060.io/credo-ts-didcomm-shorten-url": "0.0.12",
+    "@credo-ts/askar": "^0.6.1",
+    "@credo-ts/core": "^0.6.1",
+    "@credo-ts/didcomm": "^0.6.1",
+    "@credo-ts/didcomm-push-notifications": "^0.0.1",
+    "@credo-ts/didcomm-transport-queue-postgres": "^0.0.1",
+    "@credo-ts/node": "^0.6.1",
     "@hyperledger/anoncreds-shared": "^0.2.4",
-    "@hyperledger/aries-askar-nodejs": "^0.2.3",
-    "@hyperledger/aries-askar-shared": "^0.2.3",
+    "@openwallet-foundation/askar-nodejs": "^0.4.3",
+    "@openwallet-foundation/askar-shared": "^0.4.3",
     "@types/amqplib": "^0.10.4",
     "@types/pg": "^8.10.9",
     "amqplib": "^0.10.3",
     "axios": "^1.6.5",
     "cors": "^2.8.5",
     "cross-spawn": "^7.0.3",
-    "dotenv": "^10.0.0",
+    "dotenv": "^17.2.3",
     "express": "^4.18.1",
     "firebase-admin": "^11.0.0",
     "fs": "^0.0.1-security",
@@ -51,15 +52,16 @@
     "swagger-ui-express": "^4.1.6",
     "ts-node": "^10.0.0",
     "tslog": "^4.9.1",
-    "typescript": "5.1.6",
+    "typescript": "~5.9.3",
     "ws": "^8.13.0",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
     "@types/cross-spawn": "^6.0.6",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.12",
-    "@types/jest": "^27.0.1",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.14.9",
     "@types/node-fetch": "^2.6.4",
     "@types/supertest": "^2.0.11",
@@ -72,19 +74,21 @@
     "eslint": "^8.37.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^27.2.0",
+    "jest": "^29.7.0",
     "patch-package": "^6.4.7",
     "prettier": "^2.8.0",
     "ts-jest": "^29.2.5"
   },
   "resolutions": {
     "tsyringe": "4.8.0",
-    "typescript": "5.1.6",
-    "@credo-ts/anoncreds": "0.5.17",
-    "@credo-ts/askar": "0.5.17",
-    "@credo-ts/core": "0.5.17",
-    "@credo-ts/node": "0.5.17",
-    "@hyperledger/aries-askar-nodejs": "0.2.3",
+    "typescript": "~5.9.3",
+    "@credo-ts/anoncreds": "^0.6.1",
+    "@credo-ts/askar": "^0.6.1",
+    "@credo-ts/core": "^0.6.1",
+    "@credo-ts/didcomm": "^0.6.1",
+    "@credo-ts/node": "^0.6.1",
+    "@openwallet-foundation/askar-nodejs": "^0.4.3",
+    "@openwallet-foundation/askar-shared": "^0.4.3",
     "ws": "^8.13.0",
     "@types/ws": "^8.5.13",
     "@types/node": "^20.14.9"
